# nostr-bot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  rust.yml
examples/: poll.rs  simple_poll.rs
src/: bot.rs  lib.rs  network.rs  nostr.rs  utils.rs
tests/: event_kind1_interaction.rs
