[package]
name = "nostr-bot"
version = "0.2.1"
edition = "2021"

license = "MIT"
description = "Nostr bot library"
documentation = "https://docs.rs/nostr-bot"
repository = "https://github.com/slaninas/nostr-bot"
readme = "README.md"

keywords = ["nostr", "bot"]
categories = ["asynchronous", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false # TODO: set to true and disable test run only for example in README.md

[dependencies]
futures-util = "0.3.21"
json = "0.12.4"
secp256k1 = {version = "0.23.3", features = ["rand", "rand-std", "bitcoin_hashes"]}
serde = {version = "1.0.138", features = ["serde_derive"]}
serde_json = "1.0.82"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread", "time", "sync"]}
tokio-socks = "0.5.1"
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
tungstenite = "0.17.2"
url = "2.2.2"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
