[package]
name = "nostr-bot"
version = "0.3.0"
edition = "2021"

license = "MIT"
description = "Nostr bot library"
documentation = "https://docs.rs/nostr-bot"
repository = "https://github.com/slaninas/nostr-bot"
readme = "README.md"

keywords = ["nostr", "bot"]
categories = ["asynchronous", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false # TODO: set to true and disable test run only for example in README.md

[dependencies]
futures-util = "0.3"
json = "0.12"
secp256k1 = {version = "0.23", features = ["rand", "rand-std", "bitcoin_hashes"]}
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
tokio = {version = "1.19", features = ["macros", "rt-multi-thread", "time", "sync"]}
tokio-socks = "0.5"
tokio-tungstenite = {version = "0.17", features = ["native-tls"]}
tungstenite = "0.17"
url = "2.2"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
bech32 = "0.9"
hex = "0.4"
